# python-simplex

./: .pre-commit-config.yaml  .pylintrc  README.md  noxfile.py  parser.py  preprocess.py  program.py  setup.cfg  setup.py  simplex.py  test.lp
examples/: ex01.lp  ex02.lp  ex03.lp  ex04.lp  ex05.lp
simplex/: __main__.py  algorithm.py  parser.py  program.py  revised.py
