[metadata]
name = simplex
version = 1.0.0
author = Roland Kaminski
description = Educational solver for linear problems.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/rkaminsk/python-simplex

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    setuptools
    pymatrix
    numpy

[options.entry_points]
console_scripts =
    fillname = simplex:main
